--- a/fly.toml
+++ b/fly.toml
@@ -4,12 +4,12 @@
 #
 
 app = 'pourovertimer'
-primary_region = 'iad'
+primary_region = 'ewr'
 
 [build]
 
 [http_service]
-  internal_port = 3000
+  internal_port = 5000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
